add waters routes fix refresh and remove auth middleware from google auth and refresh
